fix nav bar spacing

--- a/src/index.css
+++ b/src/index.css
@@ -20,16 +20,21 @@
     justify-content: space-between;
     padding-top: 1rem;
     padding-bottom: 1rem;
+    margin-left: auto;
 }
 
 .nav-container .nav-elems {
     /* width: 70%; */
     display: flex;
     justify-content: space-evenly;
+    gap: 3em;
+    padding-right: 2.5em
 }
 
-.nav-container .logo {
+.nav .logo {
     padding-left: 0.5rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 .nav-elems li {
